--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: Sydney Spangler, Cool Kid
 <div class="blurb">
 	<h1>Hi there, I'm Sydney Spangler!</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><<!-- /.blurb -->
+</div><!-- /.blurb -->
