--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: Sydney Spangler, Cool Kid
+---
+<div class="blurb">
+	<h1>Hello</h1>
+	<p>WIP</p>
+</div><!-- /.blurb -->
