--- a/cv/index.html
+++ b/cv/index.html
@@ -1,9 +1,15 @@
 ---
 layout: default
-title: Curriculum Vitae
+title: CV
 ---
 <div class="blurb">
-	<h1>Hello</h1>
-	<p>WIP</p>
+	<h1>curriculum vitae</h1>
+	<h2>education</h1>
+	<h2>professional experience</h2>
+	<h2>related experience</h2>
+	<h2>teaching experience</h2>
+	<h2>presentations</h2>
+	<h2>publications</h2>
+	<h2>awards</h2>
 </div><!-- /.blurb -->
 
