--- a/cv/index.html
+++ b/cv/index.html
@@ -5,11 +5,37 @@ title: CV
 <div class="blurb">
 	<h1>curriculum vitae</h1>
 	<h2>education</h1>
+	<ul>
+		<li>Texas A&amp;M University-Corpus Christi</li>
+		<li>Bachelor of Arts in English</li>
+		<li>Minor in Creative Writing with a Linguistics Focus</li>
+	</ul>
 	<h2>professional experience</h2>
+	<ul>
+	</ul>
+	<ul>
+	</ul>
 	<h2>related experience</h2>
+	<ul>
+	</ul>
+	<ul>
+	</ul>
 	<h2>teaching experience</h2>
+	<ul>
+	</ul>
 	<h2>presentations</h2>
+	<ul>
+	</ul>
 	<h2>publications</h2>
+	<ul>
+	</ul>
 	<h2>awards</h2>
+	<ul>
+		<li>Texas Association of Creative Writing Teachers (TACWT) Undergraduate Nonfiction (2019)</li>
+                <li>Undergraduate Linguistics Haas Writing Award (2019)</li>
+		<li>The Marked Writers Publishing LLC Endowed Scholarship (2019)</li>
+		<li>Melvyn N. Klein Endowed Scholarship (2019)</li>
+		<li>Scissortail Creative Writing Festival Undergraduate Honorable Mention (2018)</li>
+	</ul>
 </div><!-- /.blurb -->
 
