--- a/cv/index.html
+++ b/cv/index.html
@@ -25,9 +25,16 @@ title: CV
 	</ul>
 	<h2>presentations</h2>
 	<ul>
+		<li>Spangler, S. M., "Receipts: Commercialization of Grief," 2019 Texas A&amp;M University-Corpus Christi 
+			Interdisciplinary Graduate Symposium, Corpus Christi, Texas (March 29, 2019)</li>
+		<li>"Intro to APA," Texas A&amp;M University-Corpus Christi Writing Center, Corpus Christi, Texas (September 4, 2019)</li> 
+		<li>"How to Write a Research Paper" Texas A&amp;M University-Corpus Christi Writing Center, Corpus Christi, Texas (August 28, 2019)</li>
 	</ul>
 	<h2>publications</h2>
 	<ul>
+		<li>Poole, R. E., &amp; Spangler, S. (2019). "Eco this and recycle that: An ecolinguistic analysis of a popular digital simulation game," Critical Discourse Studies.</li>
+		<li>Spangler, S. (2019). "Cole park on the weekend," 2019 Corpus Christi Writers Anthology.</li>
+		<li>Spangler, S. (2019). "Reciepts," Writing Texas.</li> 
 	</ul>
 	<h2>awards</h2>
 	<ul>
