--- a/cv/index.html
+++ b/cv/index.html
@@ -6,9 +6,12 @@ title: CV
 	<h1>curriculum vitae</h1>
 	<h2>education</h1>
 	<ul>
-		<li>Texas A&amp;M University-Corpus Christi</li>
-		<li>Bachelor of Arts in English</li>
-		<li>Minor in Creative Writing with a Linguistics Focus</li>
+		<li>Texas A&amp;M University-Corpus Christi
+			<ul>
+				<li>Bachelor of Arts in English</li>
+				<li>Minor in Creative Writing with a Linguistics Focus</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>professional experience</h2>
 	<ul>
