--- a/cv/index.html
+++ b/cv/index.html
@@ -15,8 +15,26 @@ title: CV
 	</ul>
 	<h2>professional experience</h2>
 	<ul>
-	</ul>
-	<ul>
+		<li>Texas A&amp;M University-Corpus Christi Marketing &amp; Communications
+			<ul>
+				<li>Writing Intern</li>
+				<li>04.2018-Present</li>
+			</ul>
+		</li>
+		<li>Texas A&amp;M University-Corpus Christi Writing Center
+			<ul>
+				<li>Writing Consultant</li>
+				<li>08.2019-Present</li>
+				<li>Worked with students, faculty, and staff during one-on-one consultations to improve client writing. Provided support in planning, organization, and revision. Presented workshops on APA citation, integrating sources, research papers, and revision strategies.</li>
+			</ul>
+		</li>
+		<li>Windward Review
+			<ul>
+				<li>Managing Editor</li>
+				<li>08.2018-09.2019</li>
+				<li>Curated and copyedited multilingual manuscripts for print publication, corresponded with 50+ contributors, managed editorial staff and production process. Oversaw publication budget and deadlines.</li>
+			</ul>
+	</li>
 	</ul>
 	<h2>related experience</h2>
 	<ul>
