--- a/cv/index.html
+++ b/cv/index.html
@@ -12,6 +12,12 @@ title: CV
 				<li>Minor in Creative Writing with a Linguistics Focus</li>
 			</ul>
 		</li>
+		<li>Texas A&amp;M University-Corpus Christi
+			<ul>
+				<li>Master of Arts in English</li>
+				<li>Expected graduation: 2022</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>professional experience</h2>
 	<ul>
