--- a/cv/index.html
+++ b/cv/index.html
@@ -44,8 +44,13 @@ title: CV
 	</ul>
 	<h2>related experience</h2>
 	<ul>
-	</ul>
-	<ul>
+		<li>Islander Creative Writers
+			<ul>
+				<li>President</li>
+				<li>01.2018-01.2019</li>
+				<li>Facilitated organization events, coordinated with different offices/organizations across campus, handled production and completion of specific correspondence reports, purchase orders and other financial documents related to the successful implementation of an organization-sponsored event. Created promotional materials, developed website, and maintained organization's social media accounts. Facilited writing workshops across campus.</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>teaching experience</h2>
 	<ul>
