--- a/cv/index.html
+++ b/cv/index.html
@@ -54,6 +54,18 @@ title: CV
 	</ul>
 	<h2>teaching experience</h2>
 	<ul>
+		<li>Bokenkamp Children's Shelter (2016)
+			<ul>
+				<li>Conversational English Teacher</li>
+				<li>Taught a one-day conversational English class to students ages 12-18</li>
+			</ul>
+		</li>
+		<li>Corpus Christi Literacy Council (2016)
+			<ul>
+				<li>Conversational English Teacher</li>
+				<li>Taught a one-day conversational English class to students ages 12-18</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>presentations</h2>
 	<ul>
