--- a/cv/index.html
+++ b/cv/index.html
@@ -88,5 +88,17 @@ title: CV
 		<li>Melvyn N. Klein Endowed Scholarship (2019)</li>
 		<li>Scissortail Creative Writing Festival Undergraduate Honorable Mention (2018)</li>
 	</ul>
+	<h2>skills</h2>
+	<ul>
+		<li>Adobe Products
+			<ul>
+				<li>Photoshop + Lightroom
+					<ul>
+						<li>Moderate</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+	</ul>
 </div><!-- /.blurb -->
 
