--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,6 @@ layout: default
 title: About
 ---
 <div class="blurb">
-	<h1>Hello</h1>
-	<p>WIP</p>
+	<h1>about</h1>
+	<p></p>
 </div><!-- /.blurb -->
