--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Sydney Spangler, Cool Kid
 ---
 <div class="blurb">
-	<h1>Sydney Spangler is a cool kid.</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Welcome</h1>
+	<p>Sydney Spangler is a Content Writer + Communications Professional based in Corpus Christi, TX</p>
 </div><!-- /.blurb -->
