--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,14 @@ title: About
 ---
 <div class="blurb">
 	<h1>about</h1>
-	<p></p>
+	<p>Texas A&amp;M University-Corpus Christi English graduate student. TX Master Composter in training. Storyteller.</p>
+	<ul>
+		<li>interests:
+			<ul>
+				<li>print history</li>
+				<li>ecolinguistics</li>
+				<li>digital gaming rhetoric</li>
+			</ul>
+		</li>
+	</ul>
 </div><!-- /.blurb -->
