--- a/about/index.html
+++ b/about/index.html
@@ -4,15 +4,7 @@ title: About
 ---
 <div class="blurb">
 	<h1>about</h1>
-	<p>Texas A&amp;M University-Corpus Christi English graduate student. TX Master Composter in training. Storyteller.</p>
-	
-	<ul>
-		<li>interests:
-			<ul>
-				<li>print history</li>
-				<li>ecolinguistics</li>
-				<li>digital gaming rhetoric</li>
-			</ul>
-		</li>
-	</ul>
+	<p>Hi! I'm Sydney! I'm a storyteller, linguist, and communications professional based in Corpus Christi, Tx.</p>
+	<p>My academic interests include digital gaming rhetoric, print history, and ecolinguistics. I'm also an avid fan of comic book/graphic novel design, gaming, and visual media. You can also find me  in the TX Master Composter-Gulf Coast Chapter scene!</p> 
+	<p>If you'd like to connect with me on potential collaborations, work, or various other inquiries, please email me at spangler.sydney@gmail.com. I'd love to hear from you!</p>
 </div><!-- /.blurb -->
