--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,6 @@ title: About
 ---
 <div class="blurb">
 	<h1>about</h1>
-	<p>Hi! I'm Sydney! I'm a storyteller, linguist, and communications professional based in Corpus Christi, Tx.</p>
-	<p>My academic interests include digital gaming rhetoric, print history, and ecolinguistics. I'm also an avid fan of comic book/graphic novel design, gaming, and visual media. You can also find me  in the TX Master Composter-Gulf Coast Chapter scene!</p> 
+	<p>Hi! I'm Sydney! I'm a storyteller, linguist, and book nerd. My academic interests include digital gaming rhetoric, print history, and ecolinguistics. I'm also an avid fan of comic book/graphic novel design, gaming, and visual media. You can also find me in the TX Master Composter-Gulf Coast Chapter scene!</p> 
 	<p>If you'd like to connect with me on potential collaborations, work, or various other inquiries, please email me at spangler.sydney@gmail.com. I'd love to hear from you!</p>
 </div><!-- /.blurb -->
