--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Sydney Spangler, Cool Kid
 ---
 <div class="blurb">
 	<h1>Welcome</h1>
-	<p>Sydney Spangler is a Content Writer + Communications Professional based in Corpus Christi, TX</p>
+	<p>Sydney Spangler is a Content Writer + Communications Professional based in Corpus Christi, TX. Texas A&amp;M University-Corpus Christi English M.A. student.</p>
 </div><!-- /.blurb -->
