--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,9 @@ layout: default
 title: CV
 ---
 <div class="blurb">
+	<div align="center">
 	<h1>curriculum vitae</h1>
+	</div>
 	<h2>education</h1>
 	<ul>
 		<li>Texas A&amp;M University-Corpus Christi
@@ -16,6 +18,26 @@ title: CV
 			<ul>
 				<li>Master of Arts in English</li>
 				<li>Expected graduation: 2022</li>
+			</ul>
+		</li>
+	</ul>
+	<h2>skills</h2>
+	<ul>
+		<li>Adobe Creative Suite
+			<ul>
+				<li>Moderate in Photoshop + Lightroom</li>
+				<li>Basic in InDesign + Premiere</li>
+			</ul>
+		</li>
+		<li>Microsoft Office
+			<ul>
+				<li>Fluent in Word and PowerPoint</li>
+				<li>Moderate in Excel</li>
+			</ul>
+		</li>
+		<li>HTML + CSS
+			<ul>
+				<li>Basic</li>
 			</ul>
 		</li>
 	</ul>
@@ -87,18 +109,6 @@ title: CV
 		<li>The Marked Writers Publishing LLC Endowed Scholarship (2019)</li>
 		<li>Melvyn N. Klein Endowed Scholarship (2019)</li>
 		<li>Scissortail Creative Writing Festival Undergraduate Honorable Mention (2018)</li>
-	</ul>
-	<h2>skills</h2>
-	<ul>
-		<li>Adobe Products
-			<ul>
-				<li>Photoshop + Lightroom
-					<ul>
-						<li>Moderate</li>
-					</ul>
-				</li>
-			</ul>
-		</li>
 	</ul>
 </div><!-- /.blurb -->
 
