--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,9 @@ layout: default
 title: portfolio
 ---
 <div class="blurb">
+	<div align="center">
 	<h1>portfolio</h1>
+	</div>
 	<p>WIP</p>
 </div><!-- /.blurb -->
 
