--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,5 +5,26 @@ title: portfolio
 <div class="blurb">
 	<h1>portfolio</h1>
 	<p>WIP</p>
+	</br>
+	<p>HTML</p>
+<div class="container">
+  <div class="skills html">90%</div>
+</div>
+
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">80%</div>
+</div>
+
+<p>JavaScript</p>
+<div class="container">
+  <div class="skills js">65%</div>
+</div>
+
+<p>PHP</p>
+<div class="container">
+  <div class="skills php">60%</div>
+</div>
+	
 </div><!-- /.blurb -->
 
