--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,18 @@ title: CV
 ---
 <div class="blurb">
 	<h1>curriculum vitae</h1>
+	<button type="button" class="collapsible">education</button>
+	<div class="content">
+		<p>
+			<li>TexasA&amp;M University-Corpus Christi
+				<ul>
+					<li>Bachelor of Arts in English</li>
+					<li>Minor in Creative Writing and Linguistics Focus</li>
+				</ul>
+			</li>
+		</p>
+	</div>
+	
 	<h2>education</h1>
 	<ul>
 		<li>Texas A&amp;M University-Corpus Christi
