--- a/cv/index.html
+++ b/cv/index.html
@@ -28,6 +28,7 @@ title: CV
 	</ul>
 	<h2>presentations</h2>
 	<ul>
+		<li>Carstensen, R., Murphy, T., Peppler, S., Ramos, Z., &amp; Spangler, S. M., "Cultivating Encouragement Among Writers and Editors," 2019 Texas Association of Creative Writing Teachers (TACWT) Conference, Houston, Texas (September 27, 2019)</li>
 		<li>Spangler, S. M., "Receipts: Commercialization of Grief," 2019 Texas A&amp;M University-Corpus Christi 
 			Interdisciplinary Graduate Symposium, Corpus Christi, Texas (March 29, 2019)</li>
 		<li>"Intro to APA," Texas A&amp;M University-Corpus Christi Writing Center, Corpus Christi, Texas (September 4, 2019)</li> 
@@ -47,6 +48,7 @@ title: CV
 			<ul>
 				<li>Writing Intern</li>
 				<li>04.2018-Present</li>
+				<li>DESCRIPTION FORTHCOMING</li>
 			</ul>
 		</li>
 		<li>Texas A&amp;M University-Corpus Christi Writing Center
@@ -62,7 +64,29 @@ title: CV
 				<li>08.2018-09.2019</li>
 				<li>Curated and copyedited multilingual manuscripts for print publication, corresponded with 50+ contributors, managed editorial staff and production process. Oversaw publication budget and deadlines.</li>
 			</ul>
-	</li>
+			<ul>
+				<li>Web Manager</li>
+				<li>DATE-09.2019</li>
+				<li>DESCRIPTION FORTHCOMING</li>
+			</ul>
+			<ul>
+				<li>Associate Fiction Editor</li>
+				<li>DATE</li>
+				<li>DESCRIPTION FORTHCOMING</li>
+			</ul>
+			<ul>
+				<li>Assistant Fiction Editor</li>
+				<li>DATE</li>
+				<li>DESCRIPTION FORTHCOMING</li>
+			</ul>
+		</li>
+		<li>Texas A&amp;M University-Corpus Christi Department of English
+			<ul>
+				<li>Applied Linguistics Research Assistant</li>
+				<li>DATE</li>
+				<DESCRIPTION FORTHCOMING</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>related experience</h2>
 	<ul>
@@ -73,6 +97,13 @@ title: CV
 				<li>Facilitated organization events, coordinated with different offices/organizations across campus, handled production and completion of specific correspondence reports, purchase orders and other financial documents related to the successful implementation of an organization-sponsored event. Created promotional materials, developed website, and maintained organization's social media accounts. Facilited writing workshops across campus.</li>
 			</ul>
 		</li>
+		<li>International Conversation Club
+			<ul>
+				<li>Member</li>
+				<li>DATE</li>
+				<li>DESCRIPTION</li>
+			</ul>
+		</li>	
 	</ul>
 	<h2>teaching experience</h2>
 	<ul>
