--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,10 @@ title: portfolio
 ---
 <div class="blurb">
 	<h1>portfolio</h1>
-	<p>WIP</p>
+	<p>Welcome to my portfolio.</p>
+	<ul>
+		<li>academia (add link)</li>
+		<li>professional (add link)</li>
+	</ul>
 </div><!-- /.blurb -->
 
