--- a/cv/index.html
+++ b/cv/index.html
@@ -24,7 +24,7 @@ title: CV
 	<ul>
 		<li>Poole, R. E., &amp; Spangler, S. (2019). "Eco this and recycle that: An ecolinguistic analysis of a popular digital simulation game," Critical Discourse Studies.</li>
 		<li>Spangler, S. (2019). "Cole park on the weekend," 2019 Corpus Christi Writers Anthology.</li>
-		<li>Spangler, S. (2019). "Reciepts," Writing Texas.</li> 
+		<li>Spangler, S. (2020). "Reciepts," Writing Texas. (forthcoming)</li> 
 	</ul>
 	<h2>presentations</h2>
 	<ul>
