--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,10 +4,6 @@ title: portfolio
 ---
 <div class="blurb">
 	<h1>portfolio</h1>
-	<p>Welcome to my portfolio.</p>
-	<ul>
-		<li>academia (add link)</li>
-		<li>professional (add link)</li>
-	</ul>
+	<p>Check out my <a href="https://sydneyspangler.contently.com" target="_blank">comprehensive portfolio</a> for my latest articles! If you are interested in my scholarly work, visit my academic portfolio.</p>
 </div><!-- /.blurb -->
 
