--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: sydneyspangler
 ---
 <div class="blurb">
-	<h1>Howdy</h1>
-	<p>Sydney Spangler is a Content Writer + Communications Professional based in Corpus Christi, TX.</p>
+	<h1>Hi, I'm Sydney!</h1>
+	<p>I'm a storyteller, linguist, and book nerd based in Corpus Christi, TX. I attend Texas A&amp;M University-Corpus Christi and study English at the graduate level. My academic interests include digital gaming rhetoric, print history, and ecolinguistics. I'm also an avid fan of comic book/graphic novel design, gaming, and visual media. You can find me in the TX Master Composter-Gulf Coast Chapter Scene!</p>
+	<p>If you'd like to connect with me on potential collaborations, work opportunities, or various other inquiries, contact me via <a href="mailto:spangler.sydney@gmail.com">email</a>. I'd love to hear from you!</p>
 </div><!-- /.blurb -->
