--- a/cv/index.html
+++ b/cv/index.html
@@ -120,5 +120,25 @@ title: CV
 			</ul>
 		</li>
 	</ul>
+	<h2>skills</h2>
+	<ul>
+		<li>Adobe Creative Suite
+			<ul>
+				<li>Moderate in Photoshop + Lightroom</li>
+				<li>Basic in InDesign + Premiere</li>
+			</ul>
+		</li>
+		<li>Microsoft Office
+			<ul>
+				<li>Fluent in Word and PowerPoint</li>
+				<li>Moderate in Excel</li>
+			</ul>
+		</li>
+		<li>HTML + CSS
+			<ul>
+				<li>Basic</li>
+			</ul>
+		</li>
+	</ul>
 </div><!-- /.blurb -->
 
