--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: portfolio
+title: academia
 ---
 <div class="blurb">
-	<h1>portfolio</h1>
-	<p>Check out my <a href="https://sydneyspangler.contently.com" target="_blank">comprehensive portfolio</a> for my latest articles! If you are interested in my scholarly work, visit my academic portfolio.</p>
+	<h1>academia</h1>
+	
 </div><!-- /.blurb -->
 
