--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: academia
+title: work
 ---
 <div class="blurb">
-	<h1>academia</h1>
+	<h1>work portfolio</h1>
 	
 </div><!-- /.blurb -->
 
