--- a/academia/index.html
+++ b/academia/index.html
@@ -1,1 +1,11 @@
+---
+layout: default
+title: academia
+---
+<div class="blurb">
+	<h1>academic portfolio</h1>
+  <h2>digital rhetoric</h2>
+  <h2>british poetry and fiction: 1900-Present</h2>
+</div><!-- /.blurb -->
+
 
