--- a/academia/index.html
+++ b/academia/index.html
@@ -4,7 +4,7 @@ title: academia
 ---
 <div class="blurb">
 	<h1>academic portfolio</h1>
-  <h2>digital rhetoric</h2>
+	<h2><a href="https://sydneyspangler.github.io/digital-rhetoric/">digital rhetoric</a></h2>
   <h2>british poetry and fiction: 1900-Present</h2>
 </div><!-- /.blurb -->
 
