--- a/digital-rhetoric/index.html
+++ b/digital-rhetoric/index.html
@@ -5,6 +5,6 @@ title: digital rhetoric
 <div class="blurb">
 	<h1>digital rhetoric</h1>
   <p>This portfolio represents the work done in ENGL 5362 Digital Rhetoric at Texas A&amp;M University-Corpus Christi.</p>
-  <h2>distance reading of a digital rhetoric-related scholarly journal</h2>
+  <h2>distant reading of a digital rhetoric-related scholarly journal</h2>
 </div><!-- /.blurb -->
 
