--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -6,8 +6,18 @@ title: distant reading project
 	<h1>distant reading of digital rhetoric-related scholarly journal</h1>
   	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture, and invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p> 
 	<h2>issue 23</h2>
+	<h3>articles</h3>
+	<h3>bibliography</h3>
 	<h2>issue 24</h2>
+	<h3>articles</h3>
+	<h3>bibliography</h3>
 	<h2>issue 25</h2>
+	<h3>articles</h3>
+	<h3>bibliography</h3>
 	<h2>issue 26</h2>
+	<h3>articles</h3>
+	<h3>bibliography</h3>
 	<h2>issue 27</h2>
+	<h3>articles</h3>
+	<h3>bibliography</h3>
 </div><!-- /.blurb -->
