--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -7,6 +7,7 @@ title: distant reading project
   	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture, and invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p> 
 	<h2>issue 23</h2>
 	<h3>articles</h3>
+	<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="150">
 	<h3>bibliography</h3>
 	<h2>issue 24</h2>
 	<h3>articles</h3>
