--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -4,7 +4,10 @@ title: distant reading project
 ---
 <div class="blurb">
 	<h1>distant reading of digital rhetoric-related scholarly journal</h1>
-  	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture, and invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p> 
+  	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture, and invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p>
+	<h2>methodology</h2>
+	<h2>findings</h2>
+	<p>Units of meaning <br> Themes, patterns, or trends <br> Questions, connections, patterns <br> how do "digital rhetoric" </p>
 	<h2>issue 23</h2>
 	<h3>articles</h3>
 	<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="350">
