--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -10,8 +10,11 @@ title: distant reading project
 	<p>Units of meaning <br> Themes, patterns, or trends <br> Questions, connections, patterns <br> how do "digital rhetoric" </p>
 	<h2>issue 23</h2>
 	<h3>articles</h3>
-	<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="350">
-	<h3>bibliography</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="350">
+		<figcaption>Figure 1. A wordcloud of a collection of articles from <i>enculturation</i> issue 23. This corpus has 71,443 total words and 8,043 unique word forms. The most frequent words in the corpus include: digital (978); rhetoric (640); rhetorical (315); media (260); and work (172).</figcaption>
+	</figure>
+	<h3>bibliography</h3> 
 	<h2>issue 24</h2>
 	<h3>articles</h3>
 	<img src="https://sydneyspangler.github.io/media/issue-24.PNG" alt="A wordcloud for issue 24 of enculturation. The top five words are rhetorical, technology, rhetoric, people, and digital." height="350">
