--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -14,6 +14,7 @@ title: distant reading project
 		<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="350">
 		<figcaption>Figure 1. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 23. This corpus has 71,443 total words and 8,043 unique word forms. The top words in the corpus include: digital (978); rhetoric (640); rhetorical (315); media (260); and work (172).</figcaption>
 	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=a4d9ee6ae2f9ef632a353f4d97aa14d3&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
 	<h3>bibliography</h3> 
 	<h2>issue 24</h2>
 	<h3>articles</h3>
