--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -29,6 +29,11 @@ title: distant reading project
 	</figure>
 	<p><a href="https://voyant-tools.org/?corpus=97b7b4ef6685ebac0e6a7f012194b64e&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
 	<h3>bibliography</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-24-bib.PNG" alt="A wordcloud portraying the bibliographies of issue 24 of enculturation. The top five items are pp, vol, rhetoric, disability, and accessed." height="250">
+		<figcaption>Figure 4. A wordcloud containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 24. This corpus has 6,688 total words and 2,164 unique word forms.</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=f68f10f0961b0d41f1a6f13065343df8&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
 	<h2>issue 25</h2>
 	<h3>articles</h3>
 	<h3>bibliography</h3>
