--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -14,26 +14,26 @@ title: distant reading project
 		<img src="https://sydneyspangler.github.io/media/issue-23.PNG" alt="A wordcloud for issue 23 of enculturation. The top five words are digital, rhetoric, rhetorical, media, and work." height="250">
 		<figcaption>Figure 1. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 23. This corpus has 71,443 total words and 8,043 unique word forms. The top words in the corpus include: digital (978); rhetoric (640); rhetorical (315); media (260); and work (172).</figcaption>
 	</figure>
-	<p><a href="https://voyant-tools.org/?corpus=a4d9ee6ae2f9ef632a353f4d97aa14d3&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
+	<p><a href="https://voyant-tools.org/?corpus=a4d9ee6ae2f9ef632a353f4d97aa14d3&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3> 
 	<figure>
 		<img src="https://sydneyspangler.github.io/media/issue-23-bib.PNG" alt="A wordcloud portraying the bibliographies of issue 23 of enculturation. The top five words are rhetoric, pp, digital, vol, and http." height="250">
 		<figcaption>Figure 2. A wordcloud containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 23. This corpus has 9,341 total words and 2,741 unique word forms.</figcaption>
 	</figure>
-	<p><a href="https://voyant-tools.org/?corpus=d388f009e72efe4549bd8a57f2ac9a48&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
+	<p><a href="https://voyant-tools.org/?corpus=d388f009e72efe4549bd8a57f2ac9a48&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h2>issue 24</h2>
 	<h3>articles</h3>
 	<figure>
 		<img src="https://sydneyspangler.github.io/media/issue-24.PNG" alt="A wordcloud for issue 24 of enculturation. The top five words are rhetorical, technology, rhetoric, people, and digital." height="250">
 		<figcaption>Figure 3. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 24. This corpus has 59,505 total words and 7,628 unique word forms. The top words in the corpus include: rhetorical (242); technology (219); rhetoric (192); people (184); and digital (154). </figcaption>
 	</figure>
-	<p><a href="https://voyant-tools.org/?corpus=97b7b4ef6685ebac0e6a7f012194b64e&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
+	<p><a href="https://voyant-tools.org/?corpus=97b7b4ef6685ebac0e6a7f012194b64e&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
 	<figure>
 		<img src="https://sydneyspangler.github.io/media/issue-24-bib.PNG" alt="A wordcloud portraying the bibliographies of issue 24 of enculturation. The top five items are pp, vol, rhetoric, disability, and accessed." height="250">
 		<figcaption>Figure 4. A wordcloud containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 24. This corpus has 6,688 total words and 2,164 unique word forms.</figcaption>
 	</figure>
-	<p><a href="https://voyant-tools.org/?corpus=f68f10f0961b0d41f1a6f13065343df8&panels=cirrus,reader,trends,summary,contexts">Voyant data</a></p>
+	<p><a href="https://voyant-tools.org/?corpus=f68f10f0961b0d41f1a6f13065343df8&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h2>issue 25</h2>
 	<h3>articles</h3>
 	<h3>bibliography</h3>
@@ -42,5 +42,10 @@ title: distant reading project
 	<h3>bibliography</h3>
 	<h2>issue 27</h2>
 	<h3>articles</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-27.PNG" alt="A wordcloud for issue 27 of enculturation. The top five words are asian, american, rhetoric, rhetorical, and americans." height="250">
+		<figcaption>Figure 9. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 27. This corpus has 65,404 total words and 8,184 unique word forms. The top words in the corpus include: asian (805); american (554); rhetoric (267); rhetorical (192); and americans (161).</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=6391ba85a3b358622a292d5a127e042f&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
 </div><!-- /.blurb -->
