--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -48,4 +48,9 @@ title: distant reading project
 	</figure>
 	<p><a href="https://voyant-tools.org/?corpus=6391ba85a3b358622a292d5a127e042f&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-27-bib.PNG" alt="A wordcloud portraying the bibliographies of issue 27 of enculturation. The top five items are asian, pp, american, vol, and http." height="250">
+		<figcaption>Figure 10. A wordclound containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 27. This corpus has 8,839 total words and 2,630 unique word forms.</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=4539ba47058a606754b8b1be8d414c3e&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 </div><!-- /.blurb -->
