--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -36,6 +36,11 @@ title: distant reading project
 	<p><a href="https://voyant-tools.org/?corpus=f68f10f0961b0d41f1a6f13065343df8&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h2>issue 25</h2>
 	<h3>articles</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-25.PNG" alt="A wordcloud for issue 25 of enculturation. The top five words are rhetorical, music, multimodal, power, and like." height="250">
+		<figcaption>Figure 5. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 25. This corpus has 56,066 total words and 7,573 unique word forms. The top words in the corpus include: rhetorical (166); music (141); multimodal (116); power (115); and like (113).</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=972654a66038948f8cf58b05070eed3f&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
 	<h2>issue 26</h2>
 	<h3>articles</h3>
