--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -42,6 +42,11 @@ title: distant reading project
 	</figure>
 	<p><a href="https://voyant-tools.org/?corpus=972654a66038948f8cf58b05070eed3f&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-25-bib.PNG" alt="A wordcloud for portraying the bibliographies of issue 25 of enculturation. The top five items are pp, vol, rhetoric, composition, and writing." height="250">
+		<figcaption>Figure 6. A wordcloud containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 25. This corpus has 6,287 total words and 2,157 unique word forms.</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=1ae2da5c379f7472e4d9b44638625b32&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a><p>
 	<h2>issue 26</h2>
 	<h3>articles</h3>
 	<h3>bibliography</h3>
