--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -4,7 +4,7 @@ title: distant reading project
 ---
 <div class="blurb">
 	<h1>distant reading of digital rhetoric-related scholarly journal</h1>
-  	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture, and invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p>
+  	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture that invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p>
 	<h2>methodology</h2>
 	<h2>findings</h2>
 	<p>Units of meaning <br> Themes, patterns, or trends <br> Questions, connections, patterns <br> how do "digital rhetoric" </p>
@@ -49,6 +49,11 @@ title: distant reading project
 	<p><a href="https://voyant-tools.org/?corpus=1ae2da5c379f7472e4d9b44638625b32&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a><p>
 	<h2>issue 26</h2>
 	<h3>articles</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-26.PNG" alt="A wordcloud for issue 26 of enculturation. The top five words are writing, place, rhetoric, rhetorical, and digital." height="250">
+		<figcaption>Figure 7. A wordcloud containing 55 of the most frequent words from a collection of articles from <i>enculturation</i> issue 26. The top five words are writing (183); place (164); rhetoric (133); rhetorical (113); and digital (111).</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=47717d9b3488c4a95f85f3daf7e53c63&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
 	<h2>issue 27</h2>
 	<h3>articles</h3>
