--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -55,6 +55,11 @@ title: distant reading project
 	</figure>
 	<p><a href="https://voyant-tools.org/?corpus=47717d9b3488c4a95f85f3daf7e53c63&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h3>bibliography</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/issue-26-bib.PNG" alt="A wordcloud portraying the bibliographies of issue 27 of enculturation. The top five items are http, accessed, vol, pp, and rhetoric." height="250">
+		<figcaption>Figure 8. A wordcloud containing 55 of the most frequent items from a collection of bibliographies from <i>enculturation</i> issue 26. This corpus has 9,330 total words and 2,809 unique word forms.</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=d0580d1088d38fc265f9cfa804c74259&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a></p>
 	<h2>issue 27</h2>
 	<h3>articles</h3>
 	<figure>
