--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -8,6 +8,13 @@ title: distant reading project
 	<h2>methodology</h2>
 	<h2>findings</h2>
 	<p>Units of meaning <br> Themes, patterns, or trends <br> Questions, connections, patterns <br> how do "digital rhetoric" </p>
+	<h2>Issues 23 through 27 Master Corpus</h2>
+	<h3>articles</h3>
+	<figure>
+		<img src="https://sydneyspangler.github.io/media/master.PNG" alt="A wordcloud of a collection articles taken from issues 23 through 27 of enculturation. The top five words are digital, rhetoric, rhetorical, asian, and american.">
+		<figcaption>Figure 1. A wordcloud containing 55 of the most frequent words from a collection of articles collected from issues 23 through 27 of enculturation. This corpus contains five documents with 317,822 total words and 20,397 unique word forms. The top words in the corpus include: digital (1370); rhetoric (1332); rhetorical (1028); asian (817); american (641).</figcaption>
+	</figure>
+	<p><a href="https://voyant-tools.org/?corpus=241513957b66754ae18e283b4379d416&panels=cirrus,reader,trends,summary,contexts" target="_blank">Voyant data</a><br> Looking at the visual image of the wordcloud, items that immediately stand out are: digital, rhetoric, and rhetorical. Words of interest include: new, writing, public, human, attention, place, social, work, practice, power, community, media, and experienct, among others.</p>
 	<h2>issue 23</h2>
 	<h3>articles</h3>
 	<figure>
