--- a/distant-reading-project/index.html
+++ b/distant-reading-project/index.html
@@ -5,7 +5,10 @@ title: distant reading project
 <div class="blurb">
 	<h1>distant reading of digital rhetoric-related scholarly journal</h1>
   	<p>This distant reading project looks at issues 23 through 27 of <a href="http://enculturation.net/"><i>enculturation</i></a>, a refereed journal devoted to contemporary theories of rhetoric, writing, and culture that invites submissions on rhetoric, composition, media, technology, and education. <i>enculturation</i> publishes scholarly articles, sonic projects, reviews, and responses.</p>
+	<h2>purpose</h2>
+	<p>The purpose of this project is to conduct a distant reading of the last five published issues and create a series of wordclouds. Wordclouds present "a cluster of keywords and phrases that appear most frequently in a select text or set of texts" (Mueller 2017). By analyzing frequent keywords, we can get a sense of the themes or connections that are of interest to digital rhetoric scholars and, more specifically, the academic journal <i>enculturation</i>.
 	<h2>methodology</h2>
+	<p>For this project, I created individual corpuses of the last five published issues (23 through 27) of <i>enculturation</i>. Each issue had a corpus of articles and bibliographies. The articles corpus only contained academic articles and responses. I did not include reviews. In addition to the 10 corpuses, I created a master corpus containing the articles from issues 23 through 27. Using the online tool <a href="https://voyant-tools.org/" target="_blank">Voyant</a>, I created wordclouds for each corpus and noted the five most frequent terms or items.</p> 
 	<h2>findings</h2>
 	<p>Units of meaning <br> Themes, patterns, or trends <br> Questions, connections, patterns <br> how do "digital rhetoric" </p>
 	<h2>Issues 23 through 27 Master Corpus</h2>
