--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About
+title: about
 ---
 <div class="blurb">
 	<p>Hi, I'm Sydney! I'm a storyteller, linguist, and book nerd based in Corpus Christi, TX. I attend Texas A&amp;M University-Corpus Christi and study English at the graduate level. My academic interests include digital gaming rhetoric, print history, and ecolinguistics. I'm also an avid fan of comic book/graphic novel design, gaming, and visual media. You can find me in the TX Master Composter-Gulf Coast Chapter Scene!</p>
