--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 layout: default
 title: home
 ---
-
+<div class="blurb">
+<figure>
+		<img src="https://sydneyspangler.github.io/media/profile.jpg" alt="A photo of Sydney Spangler eating ramen.">
+	</figure>
 </div><!-- /.blurb -->
