--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: home
 ---
 <div class="blurb">
 <figure>
-		<img src="https://sydneyspangler.github.io/media/profile.jpg" alt="A photo of Sydney Spangler eating ramen.">
+		<img src="https://sydneyspangler.github.io/media/profile.jpg" style="width:400px;height:auto;border:0;" alt="A photo of Sydney Spangler eating ramen.">
 	</figure>
 </div><!-- /.blurb -->
