--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: home
 ---
 <div class="blurb">
-<figure>
+	<p align="center">explorer | foodie | thinker</p>  
+	<figure>
 		<img src="https://sydneyspangler.github.io/media/profile.jpg" class="center" alt="A photo of Sydney Spangler eating ramen.">
 	</figure>
 </div><!-- /.blurb -->
