--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
-layout: default
 title: home
 ---
 <div class="blurb">
 	<p align="center">explorer | foodie | thinker</p>  
 	<figure>
-		<img src="https://sydneyspangler.github.io/media/profile.jpg" class="center" alt="A photo of Sydney Spangler eating ramen.">
+		<a href="https://sydneyspangler.github.io/about/"><img src="https://sydneyspangler.github.io/media/profile.jpg" class="center" alt="A photo of Sydney Spangler eating ramen."></a>
 	</figure>
 </div><!-- /.blurb -->
