--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: home
 ---
 <div class="blurb">
-	<p align="center">explorer | foodie | thinker</p>  
+	<p>explorer | foodie | thinker</p>  
 	<figure>
 		<a href="https://sydneyspangler.github.io/about/"><img src="https://sydneyspangler.github.io/media/profile.jpg" class="center" alt="A photo of Sydney Spangler eating ramen."></a>
 	</figure>
