--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,9 @@ layout: default
 title: work
 ---
 <div class="blurb">
-	<h1>work portfolio</h1>
+	<p>My professional interests include content writing, copy editing, publishing production, design thinking, and social media strategy.</p>
+	<p>I currently lead social media operations at Texas Master Composter-Coastal Bend Chapter, community-based program of citizen education and volunteer development to promote cost-effective and eco-responsible yard-care and food waste practices. I also write for the Office of Marketing and Communications at Texas A&M University-Corpus Christi and provide writing assistance to writers of all levels across higher education. Previously, I was the managing editor of Windward Review, an annual literary journal that showcases narratives unique to South Texas, the Coastal Bend, and border regions.</p>
+	<p>Feel free to check out my comprehensive portfolio or connect with me on LinkedIn.</p>
 	
 </div><!-- /.blurb -->
 
