--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,8 +4,8 @@ title: work
 ---
 <div class="blurb">
 	<p>My professional interests include content writing, copy editing, publishing production, design thinking, and social media strategy.</p>
-	<p>I currently lead social media operations at Texas Master Composter-Coastal Bend Chapter, a community-based program of citizen education and volunteer development to promote cost-effective and eco-responsible yard-care and food waste practices. I also <a href="https://tamucc.edu/news/index.html">write</a> for the Office of Marketing and Communications at Texas A&M University-Corpus Christi and provide writing assistance to writers of all levels across higher education. Previously, I was the managing editor of <a href="http://www.windward-review.com/">Windward Review</a>, an annual literary journal that showcases narratives unique to South Texas, the Coastal Bend, and border regions.</p>
-	<p>Feel free to check out my <a href="https://sydneyspangler.contently.com/">comprehensive portfolio</a> or connect with me on <a href="https://www.linkedin.com/in/sydney-spangler-b39051191">LinkedIn</a>.</p>
+	<p>I currently lead social media operations at Texas Master Composter-Coastal Bend Chapter, a community-based program of citizen education and volunteer development to promote cost-effective and eco-responsible yard-care and food waste practices. I also <a href="https://tamucc.edu/news/index.html" target="_blank">write</a> for the Office of Marketing and Communications at Texas A&M University-Corpus Christi and provide writing assistance to writers of all levels across higher education. Previously, I was the managing editor of <a href="http://www.windward-review.com/" target="_blank">Windward Review</a>, an annual literary journal that showcases narratives unique to South Texas, the Coastal Bend, and border regions.</p>
+	<p>Feel free to check out my <a href="https://sydneyspangler.contently.com/" target="_blank">comprehensive portfolio</a> or connect with me on <a href="https://www.linkedin.com/in/sydney-spangler-b39051191" target="_blank">LinkedIn</a>.</p>
 	
 </div><!-- /.blurb -->
 
