--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: home
 ---
 <div class="blurb">
-	<figure>
+	<figure id="pic">
 		<a href="https://sydneyspangler.github.io/about/"><img src="https://sydneyspangler.github.io/media/profile.jpg" class="center" alt="Click on the photo to access Sydney Spangler portfolio website."></a>
 	</figure>
 </div><!-- /.blurb -->
