--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,6 @@ layout: default
 title: about
 ---
 <div class="blurb">
-	<p>Hi, I'm Sydney! I'm a storyteller, book nerd, and compost enthusiast based in Corpus Christi, Texas. I'm a member of Texas Master Composter-Coastal Bend Chapter and volunteer at South Texas Botanical Gardens & Nature Center. You can also find me at Texas A&amp;M University-Corpus Christi, where I study writing at the graduate level. My academic interests include digital gaming discourse, publishing design, and applied linguistics.</p>
+	<p>Hi, I'm Sydney! I'm a storyteller, book nerd, and compost enthusiast based in Corpus Christi, Texas.</p>
 	<p>If you'd like to connect with me on potential collaborations, work opportunities, or various other inquiries, contact me via <a href="mailto:spangler.sydney@gmail.com">email</a>. I'd love to hear from you!</p>
 </div><!-- /.blurb -->
