--- a/academia/index.html
+++ b/academia/index.html
@@ -5,7 +5,7 @@ title: academia
 <div class="blurb">
 	<h1>Texas A&amp;M University-Corpus Christi</h1>
 	<h2>Bachelor of Arts in English with a minor in Creative Writing and a focus in Applied Linguistics</h2>
-	<p>During my time at A&M-Corpus Christi, my interests included digital gaming discourse, publishing design, and applied linguistics. After graduating with a B.A. in English I decided to continue my education in the English M.A. program. Following is a portfolio of courses taken during my time as a graduate student at A&M-Corpus Christi.</p>
+	<p>During my time at A&M-Corpus Christi, my interests included digital gaming discourse, publishing design, and applied linguistics. After graduating with a B.A. in English, I continued my education in the University's English M.A. program. Following is a portfolio of courses taken during my time as a graduate student at A&M-Corpus Christi.</p>
 	<ul>
 		<li><a href="https://sydneyspangler.github.io/digital-rhetoric/" target="_blank">Digital Rhetoric</a></li>
 		<li>Grant Writing</li>
