--- a/digital-rhetoric/index.html
+++ b/digital-rhetoric/index.html
@@ -6,5 +6,6 @@ title: digital rhetoric
 	<h1>digital rhetoric</h1>
   <p>This portfolio represents the work done in ENGL 5362 Digital Rhetoric at Texas A&amp;M University-Corpus Christi.</p>
   <h2><a href="https://sydneyspangler.github.io/distant-reading-project/">distant reading of a digital rhetoric-related scholarly journal</a></h2>
+  <h2><a href="https://sydneyspangler.github.io/distant-reading-project-update/">updated distant reading of a digital rhetoric-related scholarly journal</a></h2>
 </div><!-- /.blurb -->
 
