--- a/distant-reading-project-update/index.html
+++ b/distant-reading-project-update/index.html
@@ -10,7 +10,7 @@
     <a class="nodec" href="tagcloud-index.html"><h1>Nephological Neophytes</h1></a>
     <h2>Word clouds for <i>Enculturation</i> issues 23-27</h2>
     <p class="byline">Sydney Spangler</p>
-    <p>Brief methodological paragraph; same on every page, or different for each person's? Chia mumblecore viral bicycle rights. Cred leggings try-hard church-key meh aesthetic kogi occupy beard fanny pack chartreuse slow-carb irony jean shorts. Actually tilde freegan affogato keffiyeh put a bird on it man bun kinfolk. Live-edge everyday carry vegan, vexillologist VHS cray pour-over lomo heirloom wolf hexagon ennui iceland YOLO williamsburg.</p>
+    <p>As an update to my previous distance reading project, this project looked at the same five issues (23-27) from the scholarly journal <i>Enculturation</i>. I took text only from articles and introductions, choosing to ignore book reviews and bibliographies. The text included available transcripts and image/figure descriptions when available on the same page. Using the text, I pasted each issue's collection into a free online word cloud generator called TagCrowd. The parameters of the word cloud included: a limit of 50 most frequent terms, using stop words (digital, rhetoric, and rhetorical), and grouping similar words.</p>
 
 <!-- Insert HTML for your first word cloud, HTML only. Make sure the div class is "htmltagcloud". Add "tagcaption" classed h3 and edit issue/year. Heading must be INSIDE htmltagcloud div. -->
   <div class="htmltagcloud">
