--- a/distant-reading-project-update/index.html
+++ b/distant-reading-project-update/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet" href="cloud.css" >
+    <link type="text/css" rel="stylesheet" href="css/cloud.css" >
 
     <title>Distant reading of <i>Enculturation</i></title>
   </head>
