--- a/distant-reading-project-update/index.html
+++ b/distant-reading-project-update/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="css/cloud.css" >
 
-    <title>Distant reading of <i>Enculturation</i></title>
+    <title>Distant reading of Enculturation</title>
   </head>
   <body>
     <a class="nodec" href="tagcloud-index.html"><h1>Nephological Neophytes</h1></a>
